--- a/src/app/view/Home.fxml
+++ b/src/app/view/Home.fxml
@@ -3,43 +3,137 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="500.0" prefWidth="720.0" style="-fx-background-color: transparent;" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.HomeController">
+<AnchorPane prefHeight="500.0" prefWidth="720.0" style="-fx-background-color: transparent;" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.HomeController">
     <children>
-        <StackPane prefHeight="150.0" prefWidth="200.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+        <StackPane onMouseDragged="#dragged" onMousePressed="#pressed" prefHeight="150.0" prefWidth="200.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
             <effect>
                 <DropShadow />
             </effect>
             <children>
+            <HBox maxHeight="180.0" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #7caeff;">
+               <StackPane.margin>
+                  <Insets bottom="290.0" />
+               </StackPane.margin>
+               <children>
+                  <VBox prefHeight="200.0" prefWidth="100.0">
+                     <children>
+                        <HBox prefHeight="100.0" prefWidth="200.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-size: 3em;" text="Arterial Blood Gas " />
+                           </children>
+                        </HBox>
+                        <HBox prefHeight="100.0" prefWidth="200.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-size: 3em;" text="Information Reader" />
+                           </children>
+                           <VBox.margin>
+                              <Insets bottom="90.0" />
+                           </VBox.margin>
+                        </HBox>
+                     </children>
+                     <HBox.margin>
+                        <Insets left="10.0" />
+                     </HBox.margin>
+                  </VBox>
+               </children>
+            </HBox>
                 <HBox prefHeight="100.0" prefWidth="200.0">
                     <children>
-                        <VBox alignment="CENTER" style="-fx-background-color: #7caeff;" HBox.hgrow="ALWAYS">
-                            <children>
-                                <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 3em; -fx-font-family: Montserrat;" text="Home Page Test" />
-                            </children></VBox>
-                        <VBox alignment="TOP_RIGHT" style="-fx-background-color: white;" HBox.hgrow="ALWAYS">
-
-
-                            <children>
-
-
-                                <fx:include source="title_bar.fxml" />
-                        <Button fx:id="logout_button" alignment="CENTER" mnemonicParsing="false" onMouseClicked="#logout" prefWidth="80.0" style="-fx-background-color: #ff3b49; -fx-background-radius: 100PX; -fx-text-fill: white; -fx-font-family: Quicksand;" text="Logout">
-                           <VBox.margin>
-                              <Insets right="20.0" />
-                           </VBox.margin>
-                        </Button>
-
-
-                            </children>
+                  <HBox alignment="BASELINE_RIGHT" maxHeight="100.0" prefHeight="100.0" prefWidth="226.0">
+                     <children>
+                        <VBox prefHeight="100.0" prefWidth="208.0">
+                           <children>
+                              <VBox prefHeight="200.0">
+                                 <children>
+            
+                  
+                                            <fx:include source="title_bar.fxml" />
+                                    <HBox prefHeight="100.0" prefWidth="300.0">
+                                       <children>
+                                          <VBox prefHeight="47.0" prefWidth="174.0">
+                                             <children>
+                                                <VBox prefHeight="200.0" prefWidth="100.0">
+                                                   <children>
+                                                      <Text fx:id="UserWelcome" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand;" text="Welcome,">
+                                                         <VBox.margin>
+                                                            <Insets bottom="5.0" />
+                                                         </VBox.margin>
+                                                      </Text>
+                                                   </children>
+                                                </VBox>
+                                                <VBox prefHeight="200.0" prefWidth="100.0">
+                                                   <children>
+                                                      <Button fx:id="logout_button" alignment="CENTER" mnemonicParsing="false" onMouseClicked="#logout" prefWidth="100.0" style="-fx-background-color: #ff3b49; -fx-background-radius: 100PX; -fx-text-fill: white; -fx-font-family: Quicksand;" text="Logout" />
+                                                   </children>
+                                                </VBox>
+                                             </children>
+                                          </VBox>
+                                       </children>
+                                    </HBox>
+                                 </children>
+                                 <VBox.margin>
+                                    <Insets bottom="10.0" left="20.0" right="10.0" />
+                                 </VBox.margin>
+                              </VBox>
+                           </children>
+                           <HBox.margin>
+                              <Insets bottom="10.0" />
+                           </HBox.margin>
                         </VBox>
+                     </children>
+                     <HBox.margin>
+                        <Insets left="500.0" />
+                     </HBox.margin>
+                  </HBox>
                     </children>
                 </HBox>
+            <HBox maxHeight="400.0" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: white;">
+               <StackPane.margin>
+                  <Insets top="100.0" />
+               </StackPane.margin>
+               <children>
+                  <HBox onMouseClicked="#Viewpatients" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #E0FFFF;">
+                     <children>
+                        <VBox fx:id="Viewbox" prefHeight="200.0" prefWidth="100.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-weight: Bold;" text="VIEW PATIENTS" />
+                              <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../assets/ViewNormal.jpg" />
+                                 </image></ImageView>
+                           </children>
+                        </VBox>
+                     </children></HBox>
+                  <HBox onMouseClicked="#Interpretpatients" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #B0E0E6;">
+                     <children>
+                        <VBox fx:id="InterpretBox" prefHeight="200.0" prefWidth="100.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-weight: Bold;" text="INTERPRET DATA" />
+                              <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../assets/ViewNormal.jpg" />
+                                 </image></ImageView>
+                           </children>
+                        </VBox>
+                     </children></HBox>
+                  <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #E0FFFF;">
+                     <children>
+                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+                     </children></HBox>
+                  <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #B0E0E6;">
+                     <children>
+                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+                     </children></HBox>
+               </children>
+            </HBox>
             </children>
         </StackPane>
     </children>
