--- a/src/app/view/Home.fxml
+++ b/src/app/view/Home.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.effect.DropShadow?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -18,7 +17,7 @@
                 <DropShadow />
             </effect>
             <children>
-            <HBox maxHeight="180.0" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #7caeff;">
+            <HBox maxHeight="180.0" prefHeight="0.0" prefWidth="700.0" style="-fx-background-color: white;">
                <StackPane.margin>
                   <Insets bottom="290.0" />
                </StackPane.margin>
@@ -51,7 +50,7 @@
                      <children>
                         <VBox prefHeight="100.0" prefWidth="208.0">
                            <children>
-                              <VBox prefHeight="200.0">
+                              <VBox prefHeight="112.0" prefWidth="170.0">
                                  <children>
             
                   
@@ -105,10 +104,6 @@
                         <VBox fx:id="Viewbox" prefHeight="200.0" prefWidth="100.0">
                            <children>
                               <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-weight: Bold;" text="VIEW PATIENTS" />
-                              <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../assets/ViewNormal.jpg" />
-                                 </image></ImageView>
                            </children>
                         </VBox>
                      </children></HBox>
@@ -117,16 +112,12 @@
                         <VBox fx:id="InterpretBox" prefHeight="200.0" prefWidth="100.0">
                            <children>
                               <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Quicksand; -fx-font-weight: Bold;" text="INTERPRET DATA" />
-                              <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../assets/ViewNormal.jpg" />
-                                 </image></ImageView>
                            </children>
                         </VBox>
                      </children></HBox>
                   <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #E0FFFF;">
                      <children>
-                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fitHeight="385.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
                      </children></HBox>
                   <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #B0E0E6;">
                      <children>
