--- a/src/app/view/ViewPatient.fxml
+++ b/src/app/view/ViewPatient.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane onMouseDragged="#dragged" onMousePressed="#pressed" prefHeight="500.0" prefWidth="720.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.TableController">
+<AnchorPane onMouseDragged="#dragged" onMousePressed="#pressed" prefHeight="500.0" prefWidth="856.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.controller.TableController">
     <children>
         <StackPane prefHeight="150.0" prefWidth="200.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
             <effect>
@@ -66,6 +66,7 @@
                                     <TableColumn fx:id="col_pco" prefWidth="69.0" text="pCO2" />
                                     <TableColumn fx:id="col_hco" prefWidth="90.0" text="Bicarbonate" />
                                     <TableColumn fx:id="col_date" prefWidth="138.0" text="Last Modified" />
+                                    <TableColumn fx:id="col_interpreter" prefWidth="138.0" text="Interpreted By" />
                                 </columns>
                               </TableView>
                            </children>
